fix(OutputView): 출력 로직 수정