@@ -2,6 +2,7 @@ package store.domain.require;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public record RequireDetails(List<RequireDetail> details) {
 
@@ -13,6 +14,17 @@ public record RequireDetails(List<RequireDetail> details) {
         return details.entrySet()
                 .stream()
                 .map(entry -> new RequireDetail(entry.getKey(), entry.getValue()))
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public void minus(String name, int count) {
+        getDetail(name).minus(count);
+    }
+
+    private RequireDetail getDetail(String name) {
+        return details.stream()
+                .filter(detail -> detail.isNameMatch(name))
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException("No detail found with name " + name));
     }
 }
